# django-timeboxed

./: .git-blame-ignore-revs  .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: django.yml  docker.yml
docker/: requirements.in  requirements.txt
notifications/: admin.py  apps.py  models.py  shortcuts.py  tasks.py  tests.py
notifications/driver/: line.py  mqtt.py  prowl.py
notifications/fixtures/: default.json
notifications/management/commands/: notify.py
notifications/migrations/: 0001_initial.py  0002_alter_notification_key.py
pomodoro/: __init__.py  admin.py  apps.py  context_processors.py  fields.py  filters.py  forms.py  grafana.py  legacy.py  mixins.py  models.py  permissions.py  renderers.py  rest.py  serializers.py  signals.py  tasks.py  urls.py  util.py  utils.py  views.py
pomodoro/fixtures/: test.json
pomodoro/locale/en/LC_MESSAGES/: django.po
pomodoro/locale/ja/LC_MESSAGES/: django.po
pomodoro/management/commands/: calendar.py  chart.py  import.py  merge-project.py  migrate-project.py  mqtt-debug.py
pomodoro/migrations/: 0001_initial.py  0001_squashed_0005_favorite_icon.py  0002_auto_20170109_0906.py  0002_favorite.py  0003_auto_20151106_1256.py  0003_notification.py  0004_auto_20160101_0429.py  0004_favorite_count.py  0005_auto_20171212_1133.py  0005_favorite_icon.py  0006_add_tags.py  0006_memo.py  0007_shares.py  0008_project.py  0009_project_active.py  0010_project_duration.py  0011_linked_through.py  0012_increase_max_length.py  0013_delete_notification.py  0014_color_field.py
pomodoro/notifications/: mqtt.py  prowl.py
pomodoro/signals/: __init__.py  mqtt.py  notification.py
pomodoro/standalone/: __init__.py  celery.py  manage.py  settings.py  urls.py  wsgi.py
pomodoro/standalone/templates/: base.html  navbar.html
pomodoro/standalone/templates/registration/: login.html
pomodoro/standalone/templates/rest_framework/: api.html
pomodoro/static/css/: pomodoro.css
pomodoro/static/js/: pomodoro.js
pomodoro/templates/: barchart.html  lineplot.html  pomodoro_chart.html
pomodoro/templates/charts/: annotation.html  bar.html  base.html  pie.html  today.html  yesterday.html
pomodoro/templates/pomodoro/: base.html  block_favorite.html  block_history.html  block_pomodoro.html  dashboard.html  favorite_detail.html  favorite_form.html  favorite_list.html  index.html  nav.inc.html  pagination.html  pomodoro_archive_day.html  pomodoro_archive_month.html  pomodoro_archive_year.html  pomodoro_detail.html  pomodoro_form.html  pomodoro_list.html  project_detail.html  project_form.html  project_list.html  report_monthly.html  share_list.html  timer.html
pomodoro/templates/pomodoro/grafana/: help.html
pomodoro/templatetags/: pomodoro.py
pomodoro/tests/: test_api.py  test_grafana.py
