[metadata]
name = django-pomodoro
description = Render Pomodoro Calendars
author = Paul Traylor
url = https://github.com/kfdm/django-pomodoro
version = 0.1
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
install_requires =
    Django>=2.2.13
    djangorestframework
    icalendar
    Pillow
    python-dateutil
    requests

[options.entry_points]
pomodoro.notification =
    line = pomodoro.notifications.line:Line
    prowl = pomodoro.notifications.prowl:Prowl
    mqtt = pomodoro.notifications.mqtt:MQTT
console_scripts =
    pomodoro = pomodoro.standalone.manage:main[standalone]

[options.extras_require]
standalone =
    celery==4.3.0
    django-environ
    paho-mqtt
    sentry_sdk
dev =
    black
    codecov
    django_nose
    django-nose
    nose-cov
    psycopg2-binary
    unittest-xml-reporting

[isort]
forced_separate = django,pomodoro
known_django = django
known_local_folder = pomodoro
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[nosetests]
cover-html = 1
cover-html-dir = dist/cover
cover-package = pomodoro
with-coverage = 1
