[metadata]
name = timeboxed
description = Render Pomodoro Calendars
long_description_content_type = text/markdown
long_description = file:README.md
author = Paul Traylor
url = https://github.com/time-boxed/django-timeboxed
version = 0.1
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
project_urls =
    Source = https://github.com/time-boxed/django-timeboxed
    Tracker = https://github.com/time-boxed/django-timeboxed/issues

[options]
packages = find:
install_requires =
    django>=2.2.18
    djangorestframework
    icalendar
    Pillow
    python-dateutil
    requests

[options.entry_points]
pomodoro.notification =
    line = notifications.driver.line:Line
    prowl = notifications.driver.prowl:Prowl
    mqtt = notifications.driver.mqtt:MQTT
console_scripts =
    pomodoro = pomodoro.standalone.manage:main[standalone]

[options.extras_require]
standalone =
    celery==4.3.0
    django-environ
    paho-mqtt
    sentry_sdk
dev =
    black
    codecov
    psycopg2-binary==2.8.6

[isort]
forced_separate = django,pomodoro
known_django = django
known_local_folder = pomodoro
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
profile = black
