[metadata]
name = timeboxed
version = 0.1
description = Render Pomodoro Calendars
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/time-boxed/django-timeboxed
author = Paul Traylor
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/time-boxed/django-timeboxed
    Tracker = https://github.com/time-boxed/django-timeboxed/issues

[options]
packages = find:
install_requires =
    Pillow
    django>=3.2
    djangorestframework
    icalendar
    python-dateutil
    requests
    importlib-metadata;python_version<"3.10"
python_requires = >=3.8

[options.entry_points]
console_scripts =
    pomodoro = pomodoro.standalone.manage:main[standalone]
pomodoro.notification =
    line = notifications.driver.line:Line
    prowl = notifications.driver.prowl:Prowl
    mqtt = notifications.driver.mqtt:MQTT

[options.extras_require]
dev =
    black
    psycopg2
standalone =
    celery<5
    django-environ
    paho-mqtt
    sentry-sdk

[isort]
forced_separate = django,pomodoro
known_django = django
known_local_folder = pomodoro
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
profile = black
